# vizsla

./: .gitignore  LICENSE  Makefile  README.md
.cargo/: config.toml
extension/: Makefile  manifest.json
extension/content_scripts/: main.js  vizsla.js
extension/options/: options.html
extension/vizsla/: Cargo.toml  test_index.html
extension/vizsla/src/: lib.rs
extension/wasm/: vizsla.wasm
vizsla/: Cargo.toml  index.html
vizsla/src/: lib.rs
